# mdv

./: .gitignore  README.md  index.html  pyproject.toml
docs/: planning.md
samples/: acme.md  general.md  headings_test.md  systems.md  tables.md  test.csv  work_log.md
samples/nohello/: index.html  style.css
samples/projects/mdv/: architecture.md
samples/projects/mdv/features/: modal.md
samples/tutorials/javascript/: advanced.md  basics.md
src/: server.py
src/mdv/: fuzzy_search.py  logger.py  mdparser.py  server.py  sv_state.py
src/mdv/dashboard/: parser.py  routes.py
src/mdv/plugins/: __init__.py  base.py  draw.py
src/mdv/plugins/csvviewer/: __init__.py  db.py
src/mdv/plugins/worklog/: __init__.py  parser.py  routes.py
src/mdv/static/: csvviewer.css  draw.css  markdown.css  markdown.css.map  pygments.css  viewer.css  viewer.css.map
src/mdv/static/css/: theme.css
src/mdv/static/js/: csvviewer.js  draw.js  markdown.js  shared.js  viewer.js
src/mdv/static/themes/: base.css  (+8 more)
src/mdv/styles/: _fonts.scss  _mixins.scss  _vars.scss  markdown.scss  viewer.scss
src/mdv/templates/: base.html  csvviewer.html  dashboard.html  draw.html  live.html  macros.html  plain.html  viewer.html  worklog.html
src/py/: fuzzy_search.py  server.py
src/resources/: _markdown.scss  _vars.scss  style.scss
src/static/: markdown.css  markdown.css.map  viewer.css  viewer.css.map
src/styles/: _vars.scss  markdown.scss  viewer.scss
static/: markdown.css  style.css  style.css.map  viewer.css
static/js/: markdown.js  toc.js
tests/: test_mdparser.py  test_state.py
